--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidBluetoothTest</string>
+
+    <string name="local_broadcast_manager_button_name1">버튼1</string>
+    <string name="local_broadcast_manager_button_name2">버튼2</string>
 </resources>
